--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "firebase": "^9.8.3",
+    "json-server": "^0.17.0",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-carousel": "^4.3.0",
